added state management vuex

--- a/src/main.css
+++ b/src/main.css
@@ -2,10 +2,12 @@
     font-family: 'Vazir', sans-serif;
 }
 
+
 /* ion-title.ios.title-medium {
     color: rgb(24, 24, 24);
     font-size: 25px;
   } */
+
 
 ion-button {
 	z-index: 100;
@@ -19,4 +21,19 @@ ion-title {
   width: 100%;
   height: 100%;
   text-align: center;
+  color: var(--ion-color-dark)
 }
+
+
+/* ion-toolbar {
+  --background: #fffef5;
+}
+
+ion-tab-bar {
+  --background: #fffef5;
+}
+
+ion-content {
+  --background: #fffef5;
+  --color: #E16847;
+} */
